Adding tailwind stuff

--- a/app/templates/shared/_base.html
+++ b/app/templates/shared/_base.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="{{ url_for('static', path='css/main.css') }}" type="text/css" />
 </head>
 
-<body>
+<body class="bg-slate-900 text-slate-50">
     {% block header %}
     {% include "/shared/_header.html" %}
     {% endblock %}
