--- a/app/templates/shared/_header.html
+++ b/app/templates/shared/_header.html
@@ -1,7 +1,10 @@
-<header>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-    </nav>
+<header class="h-24 bg-amber-500 text-slate-900">
+    <div class="container mx-auto px-4 flex flex-col justify-between h-full items-center">
+        <nav class="self-end pt-2">
+            <a class="px-3 py-1 border border-amber-800 bg-slate-900 text-amber-200 hover:text-amber-100 hover:bg-slate-800 transition-all ease-in-out rounded" href="#">Home</a>
+            <a class="px-3 py-1 border border-amber-800 bg-slate-900 text-amber-200 hover:text-amber-100 hover:bg-slate-800 transition-all ease-in-out rounded" href="#">About</a>
+            <a class="px-3 py-1 border border-amber-800 bg-slate-900 text-amber-200 hover:text-amber-100 hover:bg-slate-800 transition-all ease-in-out rounded" href="#">Contact</a>
+        </nav>
+        <h1 class="text-4xl font-bold uppercase pb-2">Simple Site</h1>
+    </div>
 </header>
