--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,7 +1,7 @@
 {% extends "/shared/_base.html" %}
 
 {% block content %}
-
+    <section id="body" class="flex flex-col justify-center items-center mx-44">
     <h1>Simple Site</h1>
-    <p>This is just a simple site for you</p>
+    <p>This is just a simple site for you. Does this work.</p>
 {% endblock %}
