--- a/app/templates/shared/_header.html
+++ b/app/templates/shared/_header.html
@@ -1,10 +1,21 @@
-<header class="h-24 bg-amber-500 text-slate-900">
-    <div class="container mx-auto px-4 flex flex-col justify-between h-full items-center">
-        <nav class="self-end pt-2">
-            <a class="px-3 py-1 border border-amber-800 bg-slate-900 text-amber-200 hover:text-amber-100 hover:bg-slate-800 transition-all ease-in-out rounded" href="#">Home</a>
-            <a class="px-3 py-1 border border-amber-800 bg-slate-900 text-amber-200 hover:text-amber-100 hover:bg-slate-800 transition-all ease-in-out rounded" href="#">About</a>
-            <a class="px-3 py-1 border border-amber-800 bg-slate-900 text-amber-200 hover:text-amber-100 hover:bg-slate-800 transition-all ease-in-out rounded" href="#">Contact</a>
+<header class="bg-zinc-400 text-slate-900">
+    <div class="mx-auto flex flex-col justify-between h-full items-center p">
+        <nav class="flex flex-row self-start w-full h-28 py-2 justify-around items-end border-b border-b-slate-900">
+            <div id="links" class="flex flex-row items-center uppercase">
+                <a class="px-3 py-1 mx-2 border-b-2 border-b-zinc-400 hover:text-white hover:border-b-2 hover:border-b-cyan-700 transition-all ease-in-out" href="#">Home</a>
+                <a class="px-3 py-1 mx-2 border-b-2 border-b-zinc-400 hover:text-white hover:border-b-2 hover:border-b-cyan-700 transition-all ease-in-out" href="#">About</a>
+                <a class="px-3 py-1 mx-2 border-b-2 border-b-zinc-400 hover:text-white hover:border-b-2 hover:border-b-cyan-700 transition-all ease-in-out" href="#">Links</a>
+            </div>
+            <div id="search" class="relative">
+                <input type="text" placeholder="Search..." class="border w-60 py-1 pl-4 pr-10 rounded-3xl h-10 bg-slate-300 hover:bg-slate-800 hover:text-slate-300 focus:bg-slate-800 focus:text-slate-300 transition-all ease-in-out font-mono">
+                <div class="absolute right-1 top-1 h-8 w-8 bg-slate-700 rounded-full">
+                    <svg class="pt-2 pl-2 stroke-slate-50 fill-slate-700 hover:stroke-cyan-500 transition-colors ease-in-out" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><g><circle cx="5.92" cy="5.92" r="5.42" stroke-linecap="round" stroke-linejoin="round"></circle><line x1="13.5" y1="13.5" x2="9.75" y2="9.75" stroke-linecap="round" stroke-linejoin="round"></line></g></svg>
+                </div>
+            </div>
         </nav>
-        <h1 class="text-4xl font-bold uppercase pb-2">Simple Site</h1>
+        <div class="bg-cyan-600 h-full w-full">
+            <h1 class="text-5xl text-slate-900 uppercase text-center tracking-wide py-3">A Simple Site</h1>
+            <h2 class="text-lg bg-slate-500 text-zinc-300 italic text-center py-2">Featuring htmx and TailwindCSS</h2>
+        </div>
     </div>
 </header>
