minor css changes

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -684,6 +684,11 @@ video {
   background-color: rgb(161 161 170 / var(--tw-bg-opacity));
 }
 
+.bg-cyan-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(8 145 178 / var(--tw-bg-opacity));
+}
+
 .fill-slate-700 {
   fill: #334155;
 }
