--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,7 +1,8 @@
 {% extends "/shared/_base.html" %}
 
 {% block content %}
-    <section id="body" class="flex flex-col bg-slate-50 justify-center items-center max-w-screen-lg m-auto">
+    <section id="body" class="flex flex-col bg-slate-50 justify-center items-center max-w-screen-lg m-auto py-10">
     <h1>Simple Site</h1>
     <p>This is just a simple site for you. Does this work.</p>
+    </section>
 {% endblock %}
