content for music viewer

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -2,6 +2,9 @@
 
 {% block content %}
     <section id="body" class="flex flex-col bg-slate-50 justify-center items-center max-w-screen-lg m-auto">
-    <h1>Simple Site</h1>
-    <p>This is just a simple site for you. Does this work.</p>
+        <div class="flex flex-col justify-center items-center py-10">
+            <h2 class="text-2xl font-bold text-slate-800 uppercase">Main Page</h2>
+            <p>A glance at some of my favorite artists</p>
+        </div>
+    </section>
 {% endblock %}
