--- a/app/templates/shared/_header.html
+++ b/app/templates/shared/_header.html
@@ -2,8 +2,8 @@
     <div class="mx-auto flex flex-col justify-between h-full items-center p">
         <nav class="flex flex-row self-start w-full h-28 py-2 justify-around items-end border-b border-b-slate-900">
             <div id="links" class="flex flex-row items-center uppercase">
-                <a class="px-3 py-1 mx-2 border-b-2 border-b-zinc-400 hover:text-white hover:border-b-2 hover:border-b-cyan-700 transition-all ease-in-out" href="#">Home</a>
-                <a class="px-3 py-1 mx-2 border-b-2 border-b-zinc-400 hover:text-white hover:border-b-2 hover:border-b-cyan-700 transition-all ease-in-out" href="#">About</a>
+                <a class="px-3 py-1 mx-2 border-b-2 border-b-zinc-400 hover:text-white hover:border-b-2 hover:border-b-cyan-700 transition-all ease-in-out" href="/">Home</a>
+                <a class="px-3 py-1 mx-2 border-b-2 border-b-zinc-400 hover:text-white hover:border-b-2 hover:border-b-cyan-700 transition-all ease-in-out" href="/about">About</a>
                 <a class="px-3 py-1 mx-2 border-b-2 border-b-zinc-400 hover:text-white hover:border-b-2 hover:border-b-cyan-700 transition-all ease-in-out" href="#">Links</a>
             </div>
             <div id="search" class="relative">
@@ -14,7 +14,7 @@
             </div>
         </nav>
         <div class="bg-cyan-500 h-full w-full">
-            <h1 class="text-5xl text-slate-900 uppercase text-center tracking-wide py-3">A Simple Site</h1>
+            <h1 class="text-4xl font-bold text-slate-900 uppercase text-center tracking-wide py-3">A Simple Music Viewer</h1>
             <h2 class="text-lg bg-slate-500 text-zinc-300 italic text-center py-2">Featuring htmx and TailwindCSS</h2>
         </div>
     </div>
