--- a/app/templates/shared/_header.html
+++ b/app/templates/shared/_header.html
@@ -4,7 +4,7 @@
             <div id="links" class="flex flex-row items-center uppercase">
                 <a class="px-3 py-1 mx-2 border-b-2 border-b-zinc-400 hover:text-white hover:border-b-2 hover:border-b-cyan-700 transition-all ease-in-out" href="/">Home</a>
                 <a class="px-3 py-1 mx-2 border-b-2 border-b-zinc-400 hover:text-white hover:border-b-2 hover:border-b-cyan-700 transition-all ease-in-out" href="/about">About</a>
-                <a class="px-3 py-1 mx-2 border-b-2 border-b-zinc-400 hover:text-white hover:border-b-2 hover:border-b-cyan-700 transition-all ease-in-out" href="#">Links</a>
+                <a class="px-3 py-1 mx-2 border-b-2 border-b-zinc-400 hover:text-white hover:border-b-2 hover:border-b-cyan-700 transition-all ease-in-out" href="/catalog">Catalog</a>
             </div>
             <div id="search" class="relative">
                 <input type="text" placeholder="Search..." class="border w-60 py-1 pl-4 pr-10 rounded-3xl h-10 bg-slate-300 hover:bg-slate-800 hover:text-slate-300 focus:bg-slate-800 focus:text-slate-300 transition-all ease-in-out font-mono">
