add html script element to base template

--- a/app/templates/shared/_base.html
+++ b/app/templates/shared/_base.html
@@ -21,6 +21,9 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ url_for('static', path='css/main.css') }}" type="text/css" />
+
+  <!-- htmx -->
+  <script src="{{ url_for('static', path='js/htmx.min.js') }}"></script>
 </head>
 
 <body class="bg-slate-900">
