active search and more htmx stuff

--- a/app/templates/shared/_base.html
+++ b/app/templates/shared/_base.html
@@ -31,8 +31,10 @@
     {% include "/shared/_header.html" %}
     {% endblock %}
 
+    <div id="content">
     {% block content %}
     {% endblock %}
+    </div>
 
     {% block footer %}
     {% include "/shared/_footer.html" %}
