--- a/src/app/templates/shared/_base.html
+++ b/src/app/templates/shared/_base.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   <title>{{ page_title }}</title>
   <meta name="description" content="{{ page_description }}"/>
 
