--- a/app/templates/shared/_base.html
+++ b/app/templates/shared/_base.html
@@ -14,16 +14,16 @@
   <meta property="og:url" content="https://wwww.example.com"/>
 
   <!-- OPTIONAL: Favicon! -->
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', path='favicon/apple-touch-icon.png') }}">
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', path='favicon/favicon-32x32.png') }}">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', path='favicon/favicon-16x16.png') }}">
-  <link rel="manifest" href="{{ url_for('static', path='favicon/site.webmanifest') }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon/apple-touch-icon.png'">
+  <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/static/favicon/site.webmanifest">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ url_for('static', path='css/main.css') }}" type="text/css" />
+  <link rel="stylesheet" href="/static/css/main.css" type="text/css" />
 
   <!-- htmx -->
-  <script src="{{ url_for('static', path='js/htmx.min.js') }}"></script>
+  <script src="/static/js/htmx.min.js"></script>
 </head>
 
 <body class="bg-slate-900">
