change static links

--- a/app/templates/shared/_base.html
+++ b/app/templates/shared/_base.html
@@ -14,13 +14,13 @@
   <meta property="og:url" content="https://wwww.example.com"/>
 
   <!-- Favicon! -->
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', path='favicon/apple-touch-icon.png') }}">
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', path='favicon/favicon-32x32.png') }}">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', path='favicon/favicon-16x16.png') }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ url_for('static', path='css/main.css') }}" type="text/css" />
+  <link rel="stylesheet" href="/static/css/main.css" type="text/css" />
 </head>
 
 <body>
